--- a/OOPDeep/Constructor/Constructor/Constructor.vcxproj
+++ b/OOPDeep/Constructor/Constructor/Constructor.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="Constructor.txt" />
+    <Text Include="Destructor.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Aluno.h" />
