--- a/MasteringDataStructure/Essential C and Cpp Concepts/Reference/Reference/Reference.vcxproj
+++ b/MasteringDataStructure/Essential C and Cpp Concepts/Reference/Reference/Reference.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <Text Include="Theory.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
